force-app/main/default/objects/TM__c/TM__c.object-meta.xml
<CustomObject>
    <label>TM</label>
    <nameField>
        <label>TM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>