force-app/main/default/objects/TM__c/fields/Move_Id__c.field-meta.xml
<CustomField>
    <fullName>Move_Id__c</fullName>
    <externalId>true</externalId>
    <label>Move Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>