force-app/main/default/objects/TM__c/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <label>Power</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>