force-app/main/default/objects/TM__c/fields/PP__c.field-meta.xml
<CustomField>
    <fullName>PP__c</fullName>
    <label>PP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>