force-app/main/default/objects/TM__c/fields/Status_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Status_Modifier__c</fullName>
    <label>Status Modifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status_Modifiers</valueSetName>
    </valueSet>
</CustomField>